[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pixel Adventure 1/Free/Traps/Fire/Off.png" type="Texture" id=1]
[ext_resource path="res://Pixel Adventure 1/Free/Traps/Fire/On (16x32).png" type="Texture" id=2]
[ext_resource path="res://Scripts/fire.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "fire_off"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fire_on"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.0
height = 4.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="trap_fire" type="KinematicBody2D"]
collision_layer = 16

[node name="fire" type="Area2D" parent="."]
collision_layer = 16
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="fire"]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="anim" type="AnimationPlayer" parent="fire"]
autoplay = "fire_off"
anims/fire_off = SubResource( 2 )
anims/fire_on = SubResource( 3 )

[node name="shape_fire" type="CollisionShape2D" parent="fire"]
position = Vector2( 0, -23 )
shape = SubResource( 4 )
disabled = true

[node name="Timer_start" type="Timer" parent="fire"]
wait_time = 5.0
autostart = true

[node name="Timer_stop" type="Timer" parent="fire"]
wait_time = 10.0
autostart = true

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[connection signal="body_entered" from="fire" to="fire" method="_on_fire_body_entered"]
[connection signal="timeout" from="fire/Timer_start" to="fire" method="_on_Timer_start_timeout"]
[connection signal="timeout" from="fire/Timer_stop" to="fire" method="_on_Timer_stop_timeout"]
